[gd_scene load_steps=28 format=3 uid="uid://dhe042povcfpw"]

[ext_resource type="Script" path="res://script/menu/level_select/level_menu_popup.gd" id="1_wdgv1"]
[ext_resource type="Script" path="res://script/menu/level_select/background.gd" id="2_ucca1"]
[ext_resource type="LabelSettings" uid="uid://dunuwvsi1kmc6" path="res://style/themes/header_text_settings.tres" id="3_unh56"]
[ext_resource type="StyleBox" uid="uid://dr2iaypy1hsw3" path="res://style/themes/level_popup_stylebox.tres" id="4_fbwh8"]
[ext_resource type="Texture2D" uid="uid://b4dr8stjexbso" path="res://asset/sprite/default_texture.png" id="5_cqeil"]
[ext_resource type="Texture2D" uid="uid://cqaioyx831mus" path="res://asset/sprite/menu/no_rank_icon.png" id="6_efxe4"]
[ext_resource type="Texture2D" uid="uid://vbgs6xuinh7i" path="res://asset/sprite/menu/crown_icon_black.png" id="7_afwj2"]
[ext_resource type="LabelSettings" uid="uid://ckwr3h0a031t8" path="res://style/themes/normal_text_settings.tres" id="8_54hv4"]
[ext_resource type="Texture2D" uid="uid://bf2h5wok2tb46" path="res://asset/sprite/menu/gold_rank_icon.png" id="9_2adpa"]
[ext_resource type="Texture2D" uid="uid://0abcltecxu6a" path="res://asset/sprite/menu/silver_rank_icon.png" id="10_qwing"]
[ext_resource type="Texture2D" uid="uid://b2f4wnc8usx7v" path="res://asset/sprite/menu/bronze_rank_icon.png" id="11_pa6gl"]
[ext_resource type="Texture2D" uid="uid://dr42g55xg7cdb" path="res://asset/sprite/menu/play_icon.png" id="12_y3si7"]
[ext_resource type="Texture2D" uid="uid://cri34kg1sjmsd" path="res://asset/sprite/menu/arrow_icon_hover.png" id="13_ssjs2"]
[ext_resource type="Texture2D" uid="uid://cuba3x777dgdh" path="res://asset/sprite/menu/arrow_icon.png" id="14_xgrck"]
[ext_resource type="Texture2D" uid="uid://dyiqda6lkwiur" path="res://asset/sprite/menu/arrow_icon_pressed.png" id="15_tytln"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dgins"]
bg_color = Color(0, 0, 0, 0.490196)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_egj4h"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smy2j"]
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_h0vlo"]
bg_color = Color(0.87451, 0.87451, 0.87451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.733333, 0.733333, 0.733333, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4bknm"]
bg_color = Color(0.236731, 0.739581, 0.639447, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7nlm"]
bg_color = Color(0.223529, 0.670588, 0.580392, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_843jj"]
bg_color = Color(0.197766, 0.606005, 0.523742, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="Theme" id="Theme_vt4i6"]
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource("StyleBoxFlat_4bknm")
Button/styles/normal = SubResource("StyleBoxFlat_i7nlm")
Button/styles/pressed = SubResource("StyleBoxFlat_843jj")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nksj7"]
texture = ExtResource("13_ssjs2")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_51mh1"]
texture = ExtResource("14_xgrck")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n172j"]
texture = ExtResource("15_tytln")

[sub_resource type="Theme" id="Theme_hbvdm"]
Button/styles/disabled = null
Button/styles/focus = null
Button/styles/hover = SubResource("StyleBoxTexture_nksj7")
Button/styles/normal = SubResource("StyleBoxTexture_51mh1")
Button/styles/pressed = SubResource("StyleBoxTexture_n172j")

[node name="LevelMenuPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -1280.0
offset_bottom = -704.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wdgv1")

[node name="Background" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dgins")
script = ExtResource("2_ucca1")

[node name="Popup" type="Panel" parent="Background"]
layout_mode = 0
offset_left = 96.0
offset_top = 52.0
offset_right = 544.0
offset_bottom = 308.0
theme_override_styles/panel = SubResource("StyleBoxFlat_egj4h")

[node name="LevelTitle" type="Label" parent="Background/Popup"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 32.0
offset_top = 24.0
offset_right = 192.0
offset_bottom = 47.0
text = "Level Name"
label_settings = ExtResource("3_unh56")
vertical_alignment = 1

[node name="Line2D" type="Line2D" parent="Background/Popup"]
position = Vector2(-96, -56)
points = PackedVector2Array(128, 104, 512, 104)
width = 2.0
default_color = Color(0.282353, 0.282353, 0.282353, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="IconBorder" type="Panel" parent="Background/Popup"]
clip_children = 2
layout_mode = 0
offset_left = 30.0
offset_top = 60.0
offset_right = 192.0
offset_bottom = 151.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("4_fbwh8")

[node name="PanelContainer" type="PanelContainer" parent="Background/Popup"]
clip_children = 2
layout_mode = 0
offset_left = 33.0
offset_top = 63.0
offset_right = 189.0
offset_bottom = 148.0
theme_override_styles/panel = SubResource("StyleBoxFlat_smy2j")

[node name="LevelIcon" type="TextureRect" parent="Background/Popup/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("5_cqeil")
expand_mode = 1

[node name="Rank" type="TextureRect" parent="Background/Popup"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 168.0
offset_top = 124.0
offset_right = 216.0
offset_bottom = 172.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("6_efxe4")
stretch_mode = 4

[node name="RankingBorder" type="Panel" parent="Background/Popup"]
clip_children = 2
layout_mode = 0
offset_left = 312.0
offset_top = 60.0
offset_right = 418.0
offset_bottom = 180.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_h0vlo")

[node name="BestTimeIcon" type="TextureRect" parent="Background/Popup/RankingBorder"]
layout_mode = 2
offset_left = 8.0
offset_top = 3.0
offset_right = 40.0
offset_bottom = 35.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("7_afwj2")
expand_mode = 1
stretch_mode = 4

[node name="BestTime" type="Label" parent="Background/Popup/RankingBorder"]
unique_name_in_owner = true
layout_mode = 2
offset_left = 24.0
offset_top = 11.0
offset_right = 99.0
offset_bottom = 18.0
text = "00:00.00"
label_settings = ExtResource("8_54hv4")
horizontal_alignment = 2

[node name="GoldRank" type="TextureRect" parent="Background/Popup/RankingBorder"]
layout_mode = 2
offset_left = 8.0
offset_top = 33.0
offset_right = 40.0
offset_bottom = 65.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("9_2adpa")
stretch_mode = 4

[node name="SilverRank" type="TextureRect" parent="Background/Popup/RankingBorder"]
layout_mode = 0
offset_left = 8.0
offset_top = 62.0
offset_right = 40.0
offset_bottom = 94.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("10_qwing")
stretch_mode = 4

[node name="BronzeRank" type="TextureRect" parent="Background/Popup/RankingBorder"]
layout_mode = 0
offset_left = 8.0
offset_top = 91.0
offset_right = 40.0
offset_bottom = 123.0
scale = Vector2(0.6, 0.6)
texture = ExtResource("11_pa6gl")
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="Background/Popup/RankingBorder"]
layout_mode = 0
offset_left = 24.0
offset_top = 39.0
offset_right = 99.0
offset_bottom = 104.0
theme_override_constants/separation = 22

[node name="GoldTime" type="Label" parent="Background/Popup/RankingBorder/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00.00"
label_settings = ExtResource("8_54hv4")
horizontal_alignment = 2

[node name="SilverTime" type="Label" parent="Background/Popup/RankingBorder/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00.00"
label_settings = ExtResource("8_54hv4")
horizontal_alignment = 2

[node name="BronzeTime" type="Label" parent="Background/Popup/RankingBorder/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "00:00.00"
label_settings = ExtResource("8_54hv4")
horizontal_alignment = 2

[node name="Line2D2" type="Line2D" parent="Background/Popup/RankingBorder"]
position = Vector2(-495, -160)
points = PackedVector2Array(504, 184, 592, 184)
width = 2.0
default_color = Color(0.317647, 0.317647, 0.317647, 1)
begin_cap_mode = 2
end_cap_mode = 2

[node name="PlayButton" type="Button" parent="Background/Popup"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 30.0
offset_top = 188.0
offset_right = 418.0
offset_bottom = 236.0
focus_mode = 0
theme = SubResource("Theme_vt4i6")
icon = ExtResource("12_y3si7")
icon_alignment = 1

[node name="NextLevelButton" type="Button" parent="Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 568.0
offset_top = 156.0
offset_right = 616.0
offset_bottom = 204.0
focus_mode = 0
theme = SubResource("Theme_hbvdm")

[node name="LastLevelButton" type="Button" parent="Background"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 24.0
offset_top = 156.0
offset_right = 72.0
offset_bottom = 204.0
rotation = 3.14159
pivot_offset = Vector2(24, 24)
focus_mode = 0
theme = SubResource("Theme_hbvdm")

[connection signal="pressed" from="Background/Popup/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Background/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="Background/LastLevelButton" to="." method="_on_last_level_button_pressed"]
